# tickstream-streaming-lakehouse

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: source.yaml
dashboard_data/: gold_windows.csv  pipeline_result.json  timetravel.json
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: window_start.sql
dbt/models/: schema.yml
dbt/models/gold/: gold_window_metrics.sql
dbt/models/silver/: silver_ticker.sql  silver_trades.sql
dbt/tests/: assert_gold_event_count.sql  assert_gold_spread_non_negative.sql  assert_gold_trade_metrics_recompute.sql  assert_gold_vwap_positive.sql  assert_gold_window_span.sql  assert_silver_trades_unique_trade_id.sql
docker/: Dockerfile
fixtures/: README.md  contract_violations.jsonl  recorded_stream.jsonl
portfolio_assets/: tickstream.html
src/tickstream/: __init__.py  cli.py  config.py  consume.py  kafka_utils.py  logging.py  pipeline.py  schema.py  utils.py
src/tickstream/lake/: __init__.py  bronze.py  iceberg.py  marts.py  windows.py
src/tickstream/processing/: __init__.py  app.py  metrics.py
src/tickstream/producer/: __init__.py  backoff.py  demo.py  normalize.py  publisher.py  record.py  recording.py  replay.py  service.py
src/tickstream/producer/exchanges/: __init__.py  binance_us.py  coinbase.py
src/tickstream/quality/: __init__.py  contract.py  quarantine.py  sla.py
src/tickstream/query/: __init__.py  duck.py
src/tickstream/ui/: __init__.py  dashboard.py
tests/: _helpers.py  conftest.py  test_backoff.py  test_broker_roundtrip.py  test_bronze.py  test_config.py  test_contract.py  test_fixture.py  test_marts.py  test_metrics.py  test_normalize.py  test_processing.py  test_publisher.py  test_quality.py  test_query.py  test_recording.py  test_replay.py  test_schema.py  test_service.py  test_windows.py
