[project]
name = "tickstream"
version = "0.1.0"
description = "Real-time streaming lakehouse for crypto market microstructure (Redpanda + Quix Streams + Iceberg + DuckDB)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "TickStream" }]

# Core dependencies (broker client, config, logging, CLI, schema, WebSocket producer).
dependencies = [
    "confluent-kafka>=2.5,<3.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "typer>=0.12",
    "orjson>=3.10",
    "websockets>=12.0",
]

[project.optional-dependencies]
# Added incrementally per phase. Installed selectively in per-service Docker images.
processing = [
    "quixstreams>=3.0,<4.0",
    "pyarrow>=16.0",
    "pandas>=2.2",
]
lake = [
    "pyiceberg[sql-sqlite,pyarrow]>=0.7,<0.10",
    "duckdb>=1.0",
    "pyarrow>=16.0",
]
dbt = [
    "dbt-duckdb>=1.8,<2.0",
]
# Data contracts via Pandera (the spec's "or Pandera if simpler" option — cleaner row-level
# quarantine splitting than Great Expectations 1.x).
quality = [
    "pandera>=0.20",
    "pandas>=2.2",
]
ui = [
    "streamlit>=1.36",
    "duckdb>=1.0",
    "pandas>=2.2",
]
# Convenience meta-extra installing everything (used by the dev image / local dev).
all = [
    "tickstream[processing,lake,dbt,quality,ui]",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-timeout>=2.3",
    "ruff>=0.5",
]

[project.scripts]
tickstream = "tickstream.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tickstream"]

[tool.uv]
# Default dev experience: `uv sync` installs core + dev group. Use extras for layers, e.g.
#   uv sync --extra processing --extra lake
package = true

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["lake_data", ".dbt", "dbt/target", "dbt/dbt_packages"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "ARG",  # unused arguments
    "RUF",  # ruff-specific
]
ignore = [
    "B008",  # function call in default arg (typer uses this pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "B011"]

[tool.ruff.lint.isort]
known-first-party = ["tickstream"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
timeout = 120
markers = [
    "integration: requires a running Redpanda broker (KAFKA_BOOTSTRAP_SERVERS).",
    "slow: slower end-to-end / replay tests.",
]
